--- a/assets/socicon/css/styles.css
+++ b/assets/socicon/css/styles.css
@@ -9,7 +9,8 @@
     url('../fonts/socicon.woff') format('woff'),
     url('../fonts/socicon.svg#socicon') format('svg');
   font-weight: normal;
-  font-style: normal;
+  font-style: normal;  
+  font-display: swap;
 }
 
 [data-icon]:before {
@@ -20,7 +21,8 @@
   font-variant: normal !important;
   text-transform: none !important;
   speak: none;
-  line-height: 1;
+  line-height: 1;  
+  font-display: swap;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -33,8 +35,9 @@
   font-weight: normal;
   font-variant: normal;
   text-transform: none;
-  line-height: 1;
-
+  line-height: 1;  
+  font-display: swap;
+	
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
